plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
    id 'org.sonarqube' version '7.2.3.7755'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Hello'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

def testcontainersVersion = "1.20.6"

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    /* Flyway : versionnement du schéma côté SQL, équivalent « entreprise » d’Alembic (écosystème Java). */
    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql'
    runtimeOnly 'org.postgresql:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation platform("org.testcontainers:testcontainers-bom:$testcontainersVersion")
    testImplementation 'org.testcontainers:postgresql'
}

tasks.named('test') {
    useJUnitPlatform()
    testLogging {
        events "passed", "failed", "skipped"
    }
    finalizedBy jacocoTestReport
}

jacoco {
    toolVersion = "0.8.10"
}

tasks.named('jacocoTestReport') {
    reports {
        xml.required = true
        html.required = true
    }
}

sonar {
    properties {
        property 'sonar.projectKey', 'heimest_projetDevOps'
        property 'sonar.organization', 'heimest'
        property 'sonar.host.url', 'https://sonarcloud.io'
        property 'sonar.sources', 'src/main/java'
        property 'sonar.tests', 'src/test/java'
        property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
        // Bytecode requis par le analyseur Java (sinon : « please provide compiled classes with sonar.java.binaries »).
        property 'sonar.java.binaries', 'build/classes/java/main'
        property 'sonar.java.test.binaries', 'build/classes/java/test'

        // Quality Gate : le scanner attend le verdict SonarCloud ; la tâche `sonar` échoue si la gate est rouge.
        // Réf. : https://docs.sonarsource.com/sonarqube-cloud/analyzing-source-code/analysis-parameters/configuration-overview
        // Local sans attente : ./gradlew sonar -Dsonar.qualitygate.wait=false
        property 'sonar.qualitygate.wait', 'true'
        property 'sonar.qualitygate.timeout', '300'
    }
}

bootJar {
    archiveBaseName = 'Hello'
}
